# pico_bootsel_reset

./: CMakeLists.txt  bootsel_reset.c
examples/: CMakeLists.txt  blinky_bootsel_reset.c
